trunk/Archive2/bc/fd801ac6e27c77/output
main.cpp:22:5: error: use of undeclared identifier 'for_all_things'
    for_all_things([](decltype(items)::value_type & t) 
    ^
1 error generated.
